# elasticheap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml
benchmark/: allocator.cpp  arena_allocator.cpp  arena_free_list.cpp  bitset.cpp  bitset_heap.cpp  evictable_unordered_map.cpp  growable_array.cpp  main.cpp  page_manager.cpp
benchmark/lockfree/: atomic.cpp  counter.cpp  factory.h  queue.cpp  stack.cpp
include/containers/: evictable_unordered_map.h  growable_array.h  mmapped_array.h
include/containers/allocators/: arena_allocator.h  arena_allocator2.h  deferred_allocator.h  page_allocator.h
include/containers/lockfree/: atomic.h  atomic16.h  bounded_queue.h  bounded_queue_bbq.h  bounded_queue_bbq_block.h  bounded_stack.h  counter.h  queue.h  stack.h  unbounded_queue.h  unbounded_stack.h
include/containers/lockfree/detail/: aligned.h  atomic16_win32.h  exponential_backoff.h  hazard_era_allocator.h  hyaline_allocator.h  leaking_allocator.h  optional.h  padding.h  thread_manager.h  uninitialized_array.h
include/elasticheap/: allocator.h  arena_allocator2.h
include/elasticheap/detail/: atomic_bitset.h  atomic_bitset_heap.h  bitset.h  bitset_heap.h  elastic_array.h  elastic_atomic_array.h  elastic_atomic_bitset_heap.h  memory.h  utils.h
src/: libelasticheap.cpp
test/: allocator.cpp  arena_allocator.cpp  atomic.cpp  atomic_bitset.cpp  atomic_bitset_heap.cpp  bitset.cpp  bitset_heap.cpp  counter.cpp  evictable_unordered_map.cpp  growable_array.cpp  queue.cpp  stack.cpp
